Update jvm.options